<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@color/secondary"
    android:paddingBottom="2dp"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/auction_viewholder_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/auction_viewholder_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center|start"
                android:text="TITLE"
                android:drawableStart="@android:drawable/ic_lock_lock"
                android:fontFamily="sans-serif-black"
                android:textAllCaps="true"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/auction_viewholder_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="2"
                android:padding="6dp"
                android:text="$0.00"
                android:gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:textAllCaps="true"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/auction_viewholder_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:padding="6dp"
                android:text="2x set of Scholastic drawing pens of varying"
                android:fontFamily="@font/aubrey"
                android:textSize="22sp"
                android:singleLine="true"
                android:maxLines="1"
                android:maxLength="50"
                android:ellipsize="end"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/auction_viewholder_expiry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.35"
                android:padding="6dp"
                android:text="Exp: 2023/02/19"
                android:fontFamily="@font/aubrey"
                android:textColor="@color/black" />
        </LinearLayout>
        <TextView
            android:id="@+id/auction_viewholder_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingHorizontal="4dp"
            android:paddingBottom="4dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim. "
            android:fontFamily="@font/aubrey"
            android:textSize="18sp"
            android:singleLine="false"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/auction_viewholder_profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Go to public profile" />
    </LinearLayout>
</FrameLayout>