...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/biditem_auction_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:paddingHorizontal="6dp"
...
                android:textAllCaps="true"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/biditem_bid_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0.2"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
...
